# analytic-public-projects

./: Components library showcase.ipynb  README.md  pyproject.toml
Projects/: bETH position analysis public version.ipynb  beth.py  readme.md
Projects/Anchor-position-analysis-public/: README.md  anchor_data.csv  bETH position analysis public version.ipynb  price3.csv
Projects/Solana_DS_data/: Pools TVL.ipynb  Pools_tvl_extracter.py  Readme.md  stSOL general .ipynb
Projects/Solana_DS_data/Airflow deploy/: Pool_data_extractor.py  bigQ_loader.py  last_txns.csv
Projects/Solana_DS_data/Google DS/General/: stSOL_info.csv  (+1 more)
Projects/Solana_DS_data/Prices/: LDO_prices.csv  MNDE_prices.csv  SOL_prices.csv  USDC_prices.csv  USDT_prices.csv  UST_prices.csv  mSOL_prices.csv  prices_lido-staked-sol_update_2022-01-09.csv  stSOL_prices.csv  wstETH_prices.csv
Projects/Validators performance/: Validators_performance_assesment_script.py
Projects/solana dashboard/: Solana_dasboard.ipynb  readme.md  solana_extracter.py
components-library/: Showcase.py
components-library/cosmos/: cosmosGeneral.py
components-library/ethereum/: ethereumGeneral.py
components-library/ethereum/contracts/: ethereumGeneralContracts.py
components-library/ethereum/tokens/: ethereumGeneralTokens.py
components-library/ethereum/validators/: ethereumGeneralValidators.py
components-library/polkadot/: polkadotGeneral.py
components-library/polkadot/contracts/: polkadotGeneralContracts.py
components-library/polygon/: polygonGeneral.py
components-library/solana/: solanaGeneral.py
(+53 files in other folders)
