[tool.poetry]
name = "analytic-public-projects"
version = "0.1.0"
description = ""
authors = ["gregshestakov <gregshestakov@gmail.com >"]

[tool.poetry.dependencies]
python = " >=3.8,<3.11"
web3 = "^5.28.0"

[tool.poetry.dev-dependencies]
pandas = "1.4.1"
matplotlib ="^3.4.0"
numpy ="^1.20.2"
seaborn ="^0.11.2"
plotly = "^5.6.0"
scipy ="^1.10.0"
notion = "0.0.25"
google-cloud-bigquery ="2.34.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
